# felis-discord-bot

./: README.md  main.py  pyproject.toml
src/bot/: __init__.py
